updateUser + avatar
also avatar deletes from media storage when delete user
